--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,6 +59,7 @@ jobs:
           hugo \
             --gc \
             --minify \
+            --destination ../public --source ./exampleSite --themesDir ../.. \
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
