--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -49,7 +49,7 @@ title = "ICTech - Prestataire de services informatiques et réseaux"
     hidedesignbyline = true
 
     # The sections of the home page alternate styling. Mark invert as true to swap the styling of the sections
-    invertSectionColors = true
+    invertSectionColors = false
     
     [params.meta]
         keywords = "some, keywords, for, seo, you, know, google, duckduckgo, and, such"
