--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -38,7 +38,7 @@ title = "ICTech - Prestataire de services informatiques et réseaux"
     title = "ICTech - Prestataire de services informatiques et réseaux"
 
     # The "description" of your website. This is used in the meta data of your generated html.
-    description = "Prestataire de services informatiques et réseaux"
+    description = "Pour les entrepreneurs, TPE et associations dans la Marne (Châlons, Reims, Epernay). Accompagnement et cybersécurité."
 
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Plain HTML is supported in here as well. So you may e.g. add a link to your legal imprint-page.
